[project]
name = "ctmds1"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Moradi",email = "moradi.aaron@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "pyright (>=1.1.394,<2.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "pytz (>=2025.1,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
